tests/TypeValidationTests/data/CaseMismatchTest.xpl
node[] main() {
        integer x = 1;
	string s = "";

	switch (x) {
	case 1: break;
	case 2: break;
	case "hello": break;
	}

	switch (s) {
	case "hello": break;
	case "world": break;
	case 1: break;
	}
}
